# Non-ergodic-GMM-for-New-Zealand

./: README.md  pyproject.toml
examples/: example_input.csv  nonergodic_quickstart.py  quickstart.py  type2_T0_2_three_records.csv
outputs/: excel_coeff_predictions.csv  nonergodic_cli_T0_2_three_records.csv  nonergodic_quickstart_predictions.csv  quickstart_predictions.csv  rock_predictions.csv  site_predictions.csv
src/nz_nonergodic_model/: __init__.py  cli.py  io.py  model.py  nonergodic.py
src/nz_nonergodic_model/data/: ergodic_coeffs.csv  ss14_site_coeffs.csv
tests/: test_model.py
